2.5.71 (2025-07-26)

- Added a new working mode: Computer Use for autonomous navigation in the user's environment (beta; utilizes the Computer Use remote tool and the model computer-use-preview).
- Added a new remote tool: Remote MCP (with configuration in Settings -> Remote Tools).
- Added a new remote tool: File Search (with configuration in Settings -> Remote Tools).

2.5.70 (2025-07-26)

- Added separate config for Responses API for expert instances.
- Added a new model: mistral-small3.1.

2.5.69 (2025-07-25)

- The Responses API and remote tools are now allowed in Agent (autonomous) and Expert modes. Default: disabled.
- Added separate options in the configuration for enabling the Responses API in: Config -> Agents and Experts.
- Improved expert and agents system prompt.

2.5.68 (2025-07-25)

- Added a separate configuration to enable or disable native function calls in both agent and expert modes.

2.5.67 (2025-07-25)

- Added native tool call functionality in Experts.
- Enhanced the use of multiple tool calls in Experts.
- Fixed the display of Expert names when responding.
- Improved context history handling in Experts.

2.5.66 (2025-07-24)

- Fixed the issue where input focus was lost on the initial context summary.
- Added input focus at application startup.

2.5.65 (2025-07-24)

- Improved expert and agent calls and response rendering.
- Fixed duplicate goal completion in autonomous mode.

2.5.64 (2025-07-23)

- Updated the system prompts.
- Allowed native tool calls in Chat with Files when the agent is not enabled.

2.5.63 (2025-07-23)

- Agent mode improvements.
- Custom system prompt allowed for all agent types.

2.5.62 (2025-07-23)

- Enhanced system prompt append to planner agent in Experts.

2.5.61 (2025-07-23)

- Enhanced expert and autonomous agent modes.
- Added streaming output from the agent in Chat with Files mode.
- Introduced a planner agent as the engine for experts.
- Fixed issue with goal completion in autonomous agent mode.