@@ -2,6 +2,9 @@
 auto_stop.description = If enabled, the plugin will stop after the goal is reached.
 auto_stop.label = Auto-stop after the goal is reached
 auto_stop.tooltip = If enabled, the plugin will stop after the goal is reached.
+always_continue.label = Always continue...
+always_continue.tooltip = If enabled, the agent will continue reasoning until manually stopped.
+always_continue.description = If enabled, the agent will continue reasoning until manually stopped.
 iterations.description = How many iterations to run? 0 = infinite.\nWARNING: Setting this to 0 can cause many requests and heavy token usage!
 iterations.label = Iterations
 iterations.tooltip = How many iterations to run? 0 = infinite.\nWARNING: Setting this to 0 can cause many requests and heavy token usage!
