@@ -44,7 +44,7 @@ def test_append_current(mock_window):
     presets = Presets(mock_window)
     presets.build = MagicMock(return_value=PresetItem())
     presets.append_current()
-    assert len(presets.items) == 11
+    assert len(presets.items) == 12
     assert presets.items['current.chat'].chat is True
     assert presets.items['current.completion'].completion is True
     assert presets.items['current.img'].img is True
@@ -223,7 +223,7 @@ def test_load(mock_window):
         'test3': PresetItem(),
     })
     presets.load()
-    assert len(presets.items) == 14  # 10 current. presets + 3 loaded presets
+    assert len(presets.items) == 15  # 10 current. presets + 3 loaded presets
     presets.provider.load.assert_called_once_with()
 
 
